sys/kern/uipc_usrreq.c
@@ -1646,12 +1646,20 @@ unp_pcblist(SYSCTL_HANDLER_ARGS)
 			if (unp->unp_addr != NULL)
 				bcopy(unp->unp_addr, &xu->xu_addr,
 				      unp->unp_addr->sun_len);
+			else
+				bzero(&xu->xu_addr, sizeof(xu->xu_addr));
 			if (unp->unp_conn != NULL &&
 			    unp->unp_conn->unp_addr != NULL)
 				bcopy(unp->unp_conn->unp_addr,
 				      &xu->xu_caddr,
 				      unp->unp_conn->unp_addr->sun_len);
-			bcopy(unp, &xu->xu_unp, sizeof *unp);
+			else
+				bzero(&xu->xu_caddr, sizeof(xu->xu_caddr));
+			xu->unp_vnode = unp->unp_vnode;
+			xu->unp_conn = unp->unp_conn;
+			xu->xu_firstref = LIST_FIRST(&unp->unp_refs);
+			xu->xu_nextref = LIST_NEXT(unp, unp_reflink);
+			xu->unp_gencnt = unp->unp_gencnt;
 			sotoxsocket(unp->unp_socket, &xu->xu_socket);
 			UNP_PCB_UNLOCK(unp);
 			error = SYSCTL_OUT(req, xu, sizeof *xu);
